main/client/components/profilePicModal/profilePicModal.scss
#profile-pic-modal{
  height: 520px;
  width: 620px;
}
#profile-pic-modal .form-error p{
  text-align: center;
  margin-top: 10px;
}
#profile-pic-modal .modal-content{
  height: 100%;
  overflow: hidden;
  width: 100%;
  position: absolute;
  top: 0;
  background: #fff;
}
#profile-pic-modal .heading-text{
  font-size: 18px;
  margin-bottom: 10px;
  text-align: left;
  padding: 10px;
  padding-left: 0px;
}
#profile-pic-modal p{
  font-size: 13px;
  text-align: left;
  font-weight: 100;
}
#profile-pic-modal .heading-text i{
  float: left;
  cursor: pointer;
  margin-right: 10px;
  font-size: 30px;
  font-weight: 100;
  line-height: 18px;
  margin-left: -10px;
}
#profile-pic-modal .remove{
  position: absolute;
  right: 0px;
  top: 5px;
  z-index: 999;
  font-size: 20px;
  cursor: pointer;
}

